# ItunesLibraryParser

./: .gitignore  Async.hpp  CMakeLists.txt  CPPLINT.cfg  Mesurable.hpp  README.md  Tracks.hpp  TracksData.hpp  main.cpp
.github/workflows/: cmake.yml
cmake/: FindAVX2.cmake
src/: AVX2Find.hpp  ITunesLibraryParser.hpp  ITunesXMLLibrary.hpp  Mesurable.hpp  PackedTracks.hpp  Parser.hpp  Pipeable.hpp  RawTracksCollection.hpp  Tracks.hpp  TracksBoundaries.hpp  TracksBoundingResult.hpp  TracksData.hpp  main.cpp
src/SIMD/: AVX2Find.cpp  NeonFind.cpp  SIMDFind.h
src/config/: TracksScan.hpp
src/helpers/: AVX2Find.hpp  Async.hpp  Pipeable.hpp
test/: Mesurable.hpp  main.cpp
tests/: CMakeLists.txt  Mesurable.hpp  tests.cpp
tests/samples/: iTunes Music Library (S).xml
toolchains/: msys2.cmake  osx.cmake
